--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+  <group android:scaleX="0.61"
+      android:scaleY="0.61"
+      android:translateX="199.68"
+      android:translateY="199.68">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M486.2,458.3C475.4,447.6 461.7,440.4 446.8,437.5C431.8,434.5 416.4,436 402.3,441.8C388.2,447.5 376.2,457.3 367.7,469.8C359.3,482.3 354.8,497 354.8,512C354.8,527 359.3,541.7 367.7,554.2C376.2,566.7 388.2,576.5 402.3,582.2C416.4,588 431.8,589.5 446.8,586.5C461.7,583.6 475.4,576.4 486.2,565.7L431.8,512L486.2,458.3Z"
+        android:fillColor="#ec950e"/>
+    <path
+        android:pathData="M663.7,280.1C617.8,234.2 559.4,203 495.8,190.3C432.1,177.6 366.2,184.1 306.2,209C246.3,233.8 195.1,275.8 159,329.8C123,383.7 103.8,447.1 103.8,512C103.8,576.9 123,640.3 159,694.2C195.1,748.2 246.3,790.2 306.2,815C366.2,839.9 432.1,846.4 495.8,833.7C559.4,821 617.8,789.8 663.7,743.9L570.9,651.2C543.4,678.7 508.3,697.4 470.2,705C432,712.6 392.4,708.7 356.5,693.8C320.5,678.9 289.8,653.7 268.1,621.3C246.5,589 235,550.9 235,512C235,473.1 246.5,435 268.1,402.7C289.8,370.3 320.5,345.1 356.5,330.2C392.4,315.3 432,311.4 470.2,319C508.3,326.6 543.4,345.3 570.9,372.8L663.7,280.1Z"
+        android:fillColor="#ec950e"/>
+    <path
+        android:pathData="M920.8,438.9L846.5,513.1L919.2,585.8L875.9,629.1L759.9,513.2L762.3,510.8L762.2,510.7L877.4,395.5L920.8,438.9ZM623.4,438.9L580.9,481.3H681.2L767.1,395.5L810.4,438.9L736.2,513.1L808.9,585.8L765.5,629.1L679,542.7H578.8L621.9,585.8L578.5,629.1L505.8,556.4L505.8,556.5L462.4,513.2L580.1,395.5L623.4,438.9Z"
+        android:fillColor="#ec950e"/>
+  </group>
 </vector>
