--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="accent_color">#EC950E</color>
+    <color name="grey_light">#F0F0F0</color>
+    <color name="grey_medium">#A0A0A0</color>
+    <color name="grey_dark">#505050</color>
 </resources>
