--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -26,21 +26,25 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvRegistrationTitle"
-        app:layout_constraintBottom_toTopOf="@id/tabLayoutRegistration"
+        app:layout_constraintBottom_toTopOf="@id/progressBarRegistration"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp"/>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayoutRegistration"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/progressBarRegistration"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:tabBackground="@drawable/tab_selector"
-        app:tabGravity="center"
-        app:tabIndicatorHeight="0dp"
+        android:max="3"
+        android:progress="0"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@id/navigationLayoutRegistration"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:progress="1"/>
 
     <LinearLayout
         android:id="@+id/navigationLayoutRegistration"
