--- a/app/src/main/res/layout/fragment_name_input.xml
+++ b/app/src/main/res/layout/fragment_name_input.xml
@@ -11,7 +11,7 @@
         android:id="@+id/text_view_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Как вас называть?"
+        android:text="Как вас зовут?"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginBottom="32dp"
