--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -168,7 +168,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Ваш телефон"
+                android:hint="Контактный телефон"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_marginBottom="24dp">
                 <com.google.android.material.textfield.TextInputEditText
@@ -178,7 +178,6 @@
                     android:inputType="phone"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Таблица чека (пока просто текст) -->
             <TextView
                 android:id="@+id/tvTotalCost"
                 android:layout_width="match_parent"
